manifests/enforce-demo.yaml
# Namespace for payments
apiVersion: v1
kind: Namespace
metadata:
  name: enforce-demo
  labels:
    name: enforce-demo
